NIFI-2849: - Showing process group name when possible. - Providing a link to jump to the process group defined in the effective policy. - Preventing editing an inherited policy. - When overriding a policy, allowing the user to indicate if the policy should be empty or should copy the user/groups of the inherited policy.

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/policy-management.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/policy-management.css
@@ -222,3 +222,12 @@ div.policy-selected-component-type {
     font-family: Roboto;
     font-size: 13px;
 }
+
+/*
+    override policy dialog
+*/
+
+#override-policy-dialog label {
+    font-family: inherit;
+    letter-spacing: inherit;
+}
